<resources>
    <string name="app_name">Alert</string>
    <string name="action_settings">Settings</string>
    <string name="Alerta">btn_main_alerta</string>
    <string name="main_btn_alerta">Emergência</string>
    <string name="title_activity_main">Alerta</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_draw_menu_contato">Contatos</string>
    <string name="main_draw_menu_localizacao">Localização</string>
    <string name="main_draw_menu_historico">Histórico de localização</string>
    <string name="main_draw_menu_ajuda">Ajuda</string>
    <string name="main_draw_menu_config">Configuração</string>
    <string name="main_draw_menu_preferencia">Preferências</string>
    <string name="title_activity_contato">Contato</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_historico">Histórico</string>
    <string name="title_activity_ajuda">Ajuda</string>
    <string name="title_activity_cad_contato">Novo contato</string>
    <string name="cadContato_btn_import">Importar Contato</string>
    <string name="cadContato_tv_nome">Nome</string>
    <string name="cadContato_edt_hint_nome">Nome:</string>
    <string name="cadContato_tv_br">BR    +</string>
    <string name="main_btn_ok">Estou bem</string>
    <string name="main_btn_alert">Estou em perigo</string>
    <string name="title_activity_hellow">Alerta</string>
    <string name="hellow_tv_nome">Digite seu nome:</string>
    <string name="hellow_tv_numero">Digite seu número de telefone</string>
    <string name="hellow_btn_salvar">Salvar</string>
    <string name="title_activity_usuario_list">UsuarioListActivity</string>
    <string name="cadContato_tv_principal">Adicionar contato como principal</string>
    <string name="mainTv_ok">Pressione se estiver Ok.</string>
    <string name="mainTv_alerta">Pressione para mensagem. Segure para ligação</string>
    <string name="mainTv_policia">Pressione para ligar para polícia</string>
    <string name="cad_contato_tv_local">Enviar minha localização</string>
    <string name="cad_Contato_tv_local">Enviar minha localização</string>

</resources>
