<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.fernando.alert.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <Button
        android:text="190"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:id="@+id/main_btn_policia"
        android:onClick="ligacao"/>

    <Button
        android:text="@string/main_btn_alert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_btn_alerta"
        android:layout_marginBottom="117dp"
        android:onClick="enviarMensagem"
        android:layout_above="@+id/main_btn_policia"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/main_btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_btn_ok"
        android:onClick="enviarMensagem"
        android:layout_marginTop="69dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/mainTv_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:id="@+id/textView3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_btn_alerta"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="22dp"
        android:id="@+id/textView5"
        android:text="@string/mainTv_alerta" />

    <TextView
        android:text="@string/mainTv_policia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_btn_policia"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:id="@+id/textView6" />

</RelativeLayout>
